<?xml version = "1.0" encoding = "utf-8"?>
<RelativeLayout xmlns:android = "http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                xmlns:tools = "http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height = "match_parent"
    android:paddingLeft= "16dp"
    android:paddingRight = "16dp"
    android:paddingTop = "16dp"
    android:paddingBottom = "16dp"
    android:background="@color/colorPrimaryDark2"
    tools:context = ".activity.authentification.SignUpActivity">

    <TextView
        android:text="Don't have acount! Signup here "
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textViewSignup"
        android:textColorHint="@color/colorHintEvent"
        android:textColor="#a0b4cc"
        android:layout_marginBottom="22dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"/>

    <TextView
        android:text="Forget your password? Click here"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textViewmdp"
        android:textColorHint="@color/colorHintEvent"
        android:textColor="#a0b4cc"
        android:layout_above="@+id/textViewSignup"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="12dp"/>

    <Button
        android:text="Sign in"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/buttonSignin"
        android:textColor="#5f7084"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="33dp"
        android:layout_above="@+id/textViewmdp"
        android:layout_centerHorizontal="true"/>

    <EditText
        android:inputType="textEmailAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editTextEmail"
        android:hint="example@example.com"
        android:textColor="#a0b4cc"
        android:textColorHint="@color/colorHintEvent"
        android:layout_centerVertical="true"
        android:layout_alignParentStart="true"
        tools:textColorLink="@android:color/holo_red_light"/>

    <EditText
        android:inputType="textPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editTextPassword"
        android:hint="password"
        android:textColorHint="@color/colorHintEvent"
        android:textColor="#a0b4cc"
        android:layout_above="@+id/buttonSignin"
        android:layout_marginBottom="32dp"
        android:layout_alignParentStart="true"
        />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/logo_ia_3"
        android:id="@+id/imageView2"
        android:layout_alignParentTop="true"
        android:layout_alignEnd="@+id/buttonSignin"/>




</RelativeLayout>